# Riabow-dex-backend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 20260410000000_phase1_points_system.sql  20260414000000_add_frontend_fields.sql  20260415000000_vip_tier_system.sql  20260417000000_daily_lb_incremental.sql  20260417100000_referral_tier_default.sql  20260420000000_referral_commission_leaderboard.sql  20260421000000_add_tp_sl_order_types.sql  20260421000001_add_order_trigger_price.sql  20260421000002_backfill_earn_nft_amount.sql  20260421030000_bootstrap_inline_schema.sql  20260421040000_earn_event_idempotency.sql  20260422000000_realized_pnl_trade_id.sql  20260423100000_balance_change_notify.sql  20260425060000_client_order_id_and_avg_price.sql  20260426060000_user_market_leverage.sql  20260429000000_positions_accumulated_trading_fee.sql  20260429000001_protocol_fee_ledger.sql  20260430000000_market_configs_oi_caps.sql  20260511000000_spot_markets_display_name_description.sql
backend/src/: main.rs
backend/src/api/handlers/: account.rs  account_stats.rs  admin_market.rs  admin_spot.rs  admin_stats.rs  api_keys.rs  auth.rs  developer_account.rs  developer_listen_key.rs  developer_market.rs  developer_trade.rs  earn.rs  external.rs  fee_info.rs  funding_rate.rs  internal_orderbook.rs  internal_trade.rs  kline.rs  leaderboard_traders.rs  market.rs  mm_pool.rs  mod.rs  open_interest.rs  order.rs  pnl.rs  points.rs  points_admin.rs  position.rs  referral.rs  rwa.rs  trigger_orders.rs  unified_margin.rs  virtual_orders.rs  wallet.rs  withdraw.rs
backend/src/api/middleware/: api_key.rs  dev_only.rs  http_metrics.rs  mod.rs
backend/src/app/: bootstrap.rs  mod.rs  routes.rs  state.rs  workers.rs
backend/src/auth/: eip712.rs  middleware.rs  rate_limit.rs
backend/src/cache/: keys.rs  mod.rs  position_cache.rs  redis_client.rs
backend/src/config/: mod.rs  validator.rs
backend/src/constants/: eip712_domains.rs  mod.rs
backend/src/db/: mod.rs
backend/src/i18n/: messages.rs  mod.rs
backend/src/models/: margin_mode.rs  mod.rs  order.rs  points.rs  position.rs  referral.rs  unified_margin.rs  user.rs  user_api_key.rs  withdrawal.rs
backend/src/services/: metrics.rs  mod.rs  referral_leaderboard.rs
backend/src/utils/: fee_tiers.rs  mod.rs  order_classify.rs  safe_ops.rs  slippage.rs  time.rs  user_volume.rs
backend/src/websocket/: binance_proxy.rs  external_handler.rs  handler.rs  mod.rs  routes.rs
(+97 files in other folders)
