[package]
name = "ztdx-backend"
version = "0.3.1"
edition = "2021"
authors = ["ZTDX Team"]
description = "ZTDX Trading Platform Backend - High Performance Matching Engine"

[workspace]
members = [
    ".",
]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "catch-panic", "set-header"] }

# Async Runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "bigdecimal", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp", "tls-rustls-webpki-roots", "cluster", "cluster-async"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto & Signatures
ethers = { version = "2.0", features = ["rustls", "ws"] }
alloy-primitives = "0.6"
alloy-sol-types = "0.6"
sha3 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.33"
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Config
config = "0.14"

# JWT
jsonwebtoken = "9.2"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Concurrent Data Structures (for OrderBook)
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# Random number generation (for mock data)
rand = "0.8"

# HTTP Client for external APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# Email (for alerts)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

[dev-dependencies]
tokio-test = "0.4"
fake = "2.9"
rust_decimal_macros = "1.33"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
